--- a/locales/app.yml
+++ b/locales/app.yml
@@ -94,3 +94,25 @@ Help:
         help | h    - Afficher cette aide
         ver  | v    - Afficher la version du programme
         solve       - Résoudre une équation
+  solve:
+    en: |
+      Solve:
+        left a    - Left operand
+        right a   - Right operand
+        end       - End of input
+        exit | ex - Exit the program
+        help | h  - Show this help message
+    zh-CN: |
+      解方程:
+        left a    - 左操作数
+        right a   - 右操作数
+        end       - 结束输入
+        exit | ex - 退出程序
+        help | h  - 显示帮助
+    fr: |
+      Résoudre:
+        left a    - Opérande gauche
+        right a   - Opérande droit
+        end       - Fin de l'entrée
+        exit | ex - Quitter le programme
+        help | h  - Afficher cette aide
