modified:   src/cache.rs 	modified:   src/complex.rs 	modified:   src/data.rs 	modified:   src/functions.rs 	modified:   src/main.rs 	modified:   src/mathcmd.rs 	modified:   src/memory.rs 	modified:   src/modules/calc.rs 	modified:   src/modules/solve.rs 	modified:   src/output.rs 	new file:   src/point.rs

--- a/locales/fr.toml
+++ b/locales/fr.toml
@@ -1,15 +1,16 @@
-[Error]
-Unknown_Command = "ERREUR: Command inconnue"
-Unsupported_Operator = "ERREUR: Opérateur non supporté"
-Need_More_Arguments = "ERREUR: Il manque des arguments"
-Invalid_Argument = "ERREUR: Argument invalide"
+[error]
+unknown_command = "ERREUR: Command inconnue"
+unsupported_operator = "ERREUR: Opérateur non supporté"
+need_more_arguments = "ERREUR: Il manque des arguments"
+invalid_argument = "ERREUR: Argument invalide"
 
-[Warning]
-Module_Cannot_Be_Find = "ATTENTION: le module est introuvable"
-The_Cache_Is_Empty = "ATTENTION: Le cache est vide"
-Equation_Is_Not_Solvable = "ATTENTION : Le équation n'est pas résoluble"
+[warning]
+module_cannot_be_find = "ATTENTION: le module est introuvable"
+the_cache_is_empty = "ATTENTION: Le cache est vide"
+equation_is_not_solvable = "ATTENTION : Le équation n'est pas résoluble"
+func_has_no_verts = "ATTENTION : Cette fonction n'a pas de sommets"
 
-[Help]
+[help]
 main = """
 Commandes:
   exit, ex    - Quitter le programme
@@ -39,7 +40,7 @@ Opérateurs:
   lg a        - Logarithme base 2
   sqrt a      - Radical
   cbrt a      - Radical cube"""
-commande = """
+command = """
 Utilisation : mathcmd [module] [possibilités]
 Module:
   calc - calculs de base
