--- a/locales/en.toml
+++ b/locales/en.toml
@@ -1,15 +1,16 @@
-[Error]
-Unknown_Command = "ERROR: Unknown command"
-Unsupported_Operator = "ERROR: Unsupported operator"
-Need_More_Arguments = "ERROR: Need more arguments"
-Invalid_Argument = "ERROR: Invalid argument"
+[error]
+unknown_command = "ERROR: Unknown command"
+unsupported_operator = "ERROR: Unsupported operator"
+need_more_arguments = "ERROR: Need more arguments"
+invalid_argument = "ERROR: Invalid argument"
 
-[Warning]
-Module_Cannot_Be_Find = "WARNING: The module cannot be found"
-The_Cache_Is_Empty = "WARNING: The cache is empty"
-Equation_Is_Not_Solvable = "WARNING: Equation is not solvable"
+[warning]
+module_cannot_be_find = "WARNING: The module cannot be found"
+the_cache_is_empty = "WARNING: The cache is empty"
+equation_is_not_solvable = "WARNING: Equation is not solvable"
+func_has_no_verts = "WARNING: This function has no vertices"
 
-[Help]
+[help]
 main = """
 Commands:
   exit, ex    - Exit the program
