modified:   src/functions.rs 	modified:   src/libs/memory.rs 	modified:   src/libs/mod.rs 	modified:   src/libs/output.rs 	modified:   src/libs/point.rs 	modified:   src/main.rs 	modified:   src/mathcmd.rs 	modified:   src/modules/calc.rs 	modified:   src/modules/geo.rs

--- a/locales/fr.yaml
+++ b/locales/fr.yaml
@@ -9,6 +9,7 @@ warning:
   the_cache_is_empty: "ATTENTION: Le cache est vide"
   equation_is_not_solvable: "ATTENTION: Le équation n'est pas résoluble"
   func_has_no_verts: "ATTENTION: Cette fonction n'a pas de sommets"
+  ver_cmd_deprecated: "ATTENTION: La commande 'ver' est obsolète, utilisez 'mathcmd -V' dans votre shell"
 
 help:
   main: |
